2023-11-24  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify2_ps_type_array): Sanity check
	fixed size bounds.
	* testsuite/poke.map/maps-unions-14.pk: Adapt test.
	* testsuite/poke.map/maps-unions-15.pk: Likewise.
	* testsuite/poke.map/maps-unions-16.pk: Likewise.
	* testsuite/poke.pkl/scons-union-14.pk: Likewise.
	* testsuite/poke.pkl/scons-union-13.pk: Likewise.
	* testsuite/poke.pkl/scons-union-12.pk: Likewise.
	* testsuite/poke.pkl/array-siz-diag-2.pk: New test.
	* testsuite/poke.pkl/array-siz-diag-3.pk: Likewise.
	* testsuite/poke.pkl/array-siz-2.pk: Likewise.
	* testsuite/poke.pkl/array-siz-3.pk: Likewise.
	* testsuite/poke.pkl/cast-array-siz-diag-1.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2023-11-24  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/orc.pk: New file.
	* pickles/Makefile.am (dist_pickles_DATA): Add orc.pk.

2023-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.c (hserver_thread_worker): Call
	pk_unregister_thread before pthread_exit.

2023-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/srec.pk (srec_encode): Create start address records.

2023-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/btf.pk (BTF_Array): Use BTF_Type_Id for index_type.

2023-11-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/libpoke.h (struct pk_term_if): Add `pk_compiler' parameter
	to all function pointers.
	* libpoke/libpoke.c (include "libpoke.h"): Move to the top.
	(libpoke_term_if): Change the type to `struct pk_term_if_internal'.
	(pk_compiler_new_with_flags): Populate `libpoke_term_if'.
	* libpoke/pkt.h (PKT_IF): New macro to convey the terminal interface
	function pointers.
	(PK_PKC): New macro to convey the instance of current incremental
	compiler.
	(pk_*): Re-write the macro definitions to new paradigm.
	(struct pk_term_if_internal): New data type.
	(libpoke_term_if): Change the type of the variable.
	* poke/pk-term.h (pk_puts): Define as a macro.