@@ -1,3 +1,11 @@
+2023-11-25  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pvm.jitter (endhl): Do not raise exceptions.
+	(endsc): Likewise.
+	(pvm_literal_nohyperlink): Remove variable.
+	* libpoke/pkl-rt.pk (term_end_hyperlink): Adapt accordingly.
+	(term_end_class): Likewise.
+
 2023-11-24  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-typify.c (pkl_typify2_ps_type_array): Sanity check
